got into working state
